Guest auth white space issue at footer + member

--- a/docroot/react/src/views/guest-authentication/guest-authentication.less
+++ b/docroot/react/src/views/guest-authentication/guest-authentication.less
@@ -213,9 +213,9 @@
         }
     }
 
-    // .form-footer {
-    //     display: none;
-    // }
+    .form-footer {
+        display: none;
+    }
 }
 
 /* Mobile Styles */
